--- a/MemoI.Recursos.Infrastructure/MemoI.Recursos.Infrastructure.csproj
+++ b/MemoI.Recursos.Infrastructure/MemoI.Recursos.Infrastructure.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" Version="7.1.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-preview.4.23259.3" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.4.23259.5" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-preview.4" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NodaTime" Version="8.0.0-preview.4" />
     </ItemGroup>
